[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Body.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Pawns/Pawn_04/Parts/Pawn_04_legs.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Pawns/Pawn_04/Parts/Pawn_04_Part_Head.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Pawns/Pawn_04.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Pawns/Pawn_04/Parts/Pawn_04_Part_Arm.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Pawns/Parts/Timers.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Prone"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Pawn_04_legs:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Pawn_04_Part_Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Pawn_04_legs:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Pawn_04_Part_Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=4]
height = 0.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 24.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0
height = 44.0

[node name="Pawn_04" type="KinematicBody2D" groups=[
"hittable",
"ladder",
"player",
]]
collision_layer = 2
collision_mask = 67102
script = ExtResource( 4 )

[node name="Timers" parent="." instance=ExtResource( 6 )]

[node name="Raycasts" type="Node2D" parent="."]
visible = false

[node name="Down_L" type="RayCast2D" parent="Raycasts"]
position = Vector2( -10, 15 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 2078

[node name="Down_L2" type="RayCast2D" parent="Raycasts"]
position = Vector2( -10, 10 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 2078

[node name="Down_R" type="RayCast2D" parent="Raycasts"]
position = Vector2( 10, 15 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 2078

[node name="Down_R2" type="RayCast2D" parent="Raycasts"]
position = Vector2( 10, 10 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 2078

[node name="Down_C" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 15 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2078

[node name="Down_C2" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 12 )
cast_to = Vector2( 0, 1 )
collision_mask = 2078

[node name="Up" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -14 )
enabled = true
cast_to = Vector2( 0, -3 )
collision_mask = 8

[node name="Plat_Test" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 12 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="POS_Arm" type="Position2D" parent="Body"]

[node name="Pawn_04_Part_Arm" parent="Body/POS_Arm" instance=ExtResource( 5 )]

[node name="Pawn_04_legs" parent="Body" instance=ExtResource( 2 )]
show_behind_parent = true

[node name="Pawn_04_Part_Head" parent="Body" instance=ExtResource( 3 )]
show_behind_parent = true

[node name="Shield" type="Sprite" parent="Body"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Prone = SubResource( 1 )
anims/Up = SubResource( 2 )

[node name="CollisionShape2D_Up" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 3 )
disabled = true

[node name="CollisionShape2D_Down" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 4 )
disabled = true

[node name="Pick_Up_Area" type="Area2D" parent="."]
visible = false
collision_layer = 262144
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pick_Up_Area"]
rotation = 1.5708
shape = SubResource( 5 )

[node name="Ladder_Area" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder_Area"]
shape = SubResource( 6 )
[connection signal="body_entered" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_entered"]
[connection signal="body_exited" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_exited"]
[connection signal="body_entered" from="Ladder_Area" to="." method="_on_Ladder_Area_body_entered"]
[connection signal="body_exited" from="Ladder_Area" to="." method="_on_Ladder_Area_body_exited"]
